<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/ui">
		<CheckBoxPreference
			android:key="com.ch3d.xreminderx.preferences.remove_reminder_promt"
			android:title="@string/show_removing_promt"
			android:summary="@string/show_promt_when_removing_reminder"
			android:defaultValue="@bool/show_prompt_default" />
	</PreferenceCategory>
    <PreferenceCategory android:title="@string/reminders">
		<com.ch3d.xreminderx.reminders.settings.PostponePreference
			android:key="com.ch3d.xreminderx.preferences.postpone_time"
	        android:title="@string/postpone_time"
	        android:summary="@string/time_to_postpone_reminder"
	        android:dialogMessage="@string/time_to_postpone_reminder"
	        android:text="@string/postfix_minutes" />
	</PreferenceCategory>
</PreferenceScreen>