<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:padding="@dimen/activity_horizontal_margin" >
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal" >
	        <ImageView
	            android:id="@+f_reminder_view/icon_type"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:paddingTop="8dp"
	            android:layout_gravity="left|top"
	            android:src="@drawable/ic_reminder_type" />
	        <TextView
	            android:id="@+f_reminder_view/text"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:textIsSelectable="false"
	            android:textSize="@dimen/font_size_event_title" />
	    </LinearLayout>
		<LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal" >
	        <TextView
	            android:id="@+f_reminder_view/txtOngoing"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:visibility="gone"
	            android:textAllCaps="true"
	            android:textAppearance="?android:attr/textAppearanceMedium"
	            android:fontFamily="sans-serif-light"
	            android:text="@string/ongoing"
	            android:textColor="@android:color/holo_green_light" />
	        <TextView
	            android:id="@+f_reminder_view/txtSilent"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:visibility="gone"
	            android:textAllCaps="true"
	            android:textAppearance="?android:attr/textAppearanceMedium"
	            android:fontFamily="sans-serif-light"
	            android:text="@string/silent"
	            android:textColor="@android:color/holo_orange_light" />
	    </LinearLayout>
	    <LinearLayout
	        android:id="@+f_reminder_view/panelColor"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        android:padding="@dimen/activity_horizontal_margin" >
	        <TextView
	            style="@style/Text.Header"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/color" />
	        <View
	            android:layout_width="match_parent"
	            android:layout_height="@dimen/header_delimiter_height"
	            style="@style/View.Delimiter.Horizontal" />
	        <View
	            android:id="@+f_reminder_view/color"
	            android:layout_width="match_parent"
	            android:layout_height="32dp"
	            android:layout="@layout/x_contact_badge"
	            android:padding="4dp" />
	    </LinearLayout>
	    <LinearLayout
	        android:id="@+f_reminder_view/panelSelectContact"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        android:padding="@dimen/activity_horizontal_margin" >
	        <TextView
	            style="@style/Text.Header"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/contact" />
	        <View
	            android:layout_width="match_parent"
	            android:layout_height="@dimen/header_delimiter_height"
	            style="@style/View.Delimiter.Horizontal" />
	        <ViewStub
	            android:id="@+f_reminder_view/contact_badge"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout="@layout/x_contact_badge"
	            android:padding="4dp" />
	    </LinearLayout>
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        android:padding="@dimen/activity_horizontal_margin" >
	        <TextView
	            style="@style/Text.Header"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/event_time" />
	        <View
	            android:layout_width="match_parent"
	            android:layout_height="@dimen/header_delimiter_height"
	            style="@style/View.Delimiter.Horizontal" />
	        <TextView
	            android:id="@+f_reminder_view/timestamp"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:fontFamily="sans-serif-light"
	            android:textAppearance="?android:attr/textAppearanceLarge"
	            android:textIsSelectable="false" />
	    </LinearLayout>
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        android:padding="@dimen/activity_horizontal_margin" >
	        <TextView
	            style="@style/Text.Header"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/alarm_time" />
	        <View
	            android:layout_width="match_parent"
	            android:layout_height="@dimen/header_delimiter_height"
	            style="@style/View.Delimiter.Horizontal" />
	        <TextView
	            android:id="@+f_reminder_view/alarmTimestamp"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:fontFamily="sans-serif-light"
	            android:textAppearance="?android:attr/textAppearanceLarge"
	            android:textIsSelectable="false" />
	    </LinearLayout>
	</LinearLayout>
</ScrollView>